implement navigation, mission and gallery section

--- a/index.html
+++ b/index.html
@@ -2,10 +2,59 @@
 
 <html>
   <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="reset css" href="reset.css"> 
+    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./resources/icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    
+    <div class="nav">
+      <img class="logo" src="./resources/logo.png" alt="romantique logo">
+      <ul class="links">
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </div>
+    <div class="mission">
+      <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h2>
+    </div>
+    <div class="gallery">
+      <h1>Shop Gallery</h1>
+      <div class="gl-container">
+        <img src="./resources/img1.jpg" alt="img 1">
+        <img src="./resources/img2.jpg" alt="img 2">
+        <img src="./resources/img3.jpg" alt="img 3">
+        <img src="./resources/img4.jpg" alt="img 4">
+        <img src="./resources/img5.jpg" alt="img 5">
+        <img src="./resources/img6.jpg" alt="img 6">
+        <img src="./resources/img7.jpg" alt="img 7">
+      </div>
+    </div>
+    <div class="team">
+      <h1>Our Team</h1>
+      <div class="team-gallery">
+        <div class="team-container">
+          <img src="./resources/ian-dooley.jpg">
+          <h3>Ian Dooley</h3>
+        </div>
+        <div class="team-container">
+          <img src="./resources/niklas-veenhuis.jpg">
+          <h3>Niklas Veenhuis</h3>
+        </div>
+        <div class="team-container">
+          <img src="./resources/rafaella-mendes-diniz.jpg">
+          <h3>Rafaella Mendes Diniz</h3>
+        </div>
+        <div class="team-container"></div>
+        <div class="team-container"></div>
+      </div>
+    </div>
+    <footer>
+      <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+    </footer>
   </body>
 </html>
