--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <!-- Navigation -->
+
     <div class="nav">
       <img class="logo" src="./resources/logo.png" alt="romantique logo">
       <ul class="links">
@@ -20,8 +22,13 @@
       </ul>
     </div>
     <div class="mission">
-      <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h2>
+      <div class="mission-message">
+        <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h2>
+      </div>
     </div>
+
+    <!-- Gallery -->
+
     <div class="gallery">
       <h1>Shop Gallery</h1>
       <div class="gl-container">
@@ -34,6 +41,9 @@
         <img src="./resources/img7.jpg" alt="img 7">
       </div>
     </div>
+
+    <!-- Team -->
+
     <div class="team">
       <h1>Our Team</h1>
       <div class="team-gallery">
@@ -53,8 +63,22 @@
         <div class="team-container"></div>
       </div>
     </div>
+
+    <!-- Footer -->
+
     <footer>
-      <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+      <div class="footer-container">
+        <div class="copyright">
+          <h4>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></h4>
+          <h4>Photos taken from <a href="https://unsplash.com/">unsplash</a></h4>
+        </div>
+        <div class="contact">
+          <ul>
+            <li><h4>Phone: +1(228)-322-88-14</h4></li>
+            <li><h4>Email: admin@romantique.com</h4></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
